--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.1",
+    "css-loader": "^6.8.1",
     "jquery": "^3.7.1",
     "prismjs": "^1.29.0",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2"
   },
   "devDependencies": {
