--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "css-loader": "^6.8.1",
     "jquery": "^3.7.1",
     "prismjs": "^1.29.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2"
   },
